--- a/README
+++ b/README
@@ -11,10 +11,13 @@ Background:
    of traditional tapes being shipped off site.
 
    We already decided on using OpenIndiana for file storage with ZFS, and wanted
-   to utilize ZFS send & receive to push changes to the cloud.
+   to utilize ZFS send & receive to push changes to the cloud.  
+
+   After numerous failed attempts to get OpenIndiana running on EC2, I moved on to 
+   ZFS on Linux (ZoL) on an Amazon Ubuntu 12.04 instance.   
 
    Goals:
-     1. Secure, meaning encrypted data in the cloud.
+     1. Highly secure, meaning encrypted data in the cloud.  Keys are tightly controlled.
      2. Relatively inexpensive.
      3. Fully automated.
      4. Scalable
@@ -33,23 +36,92 @@ Background:
    grow script I wrote will replace one EBS at a time in each vdev, wait for a resilver and replace the
    next until all have been replace.   This allows for in place growth of the storage and keeps
    the pool balanced and never requires restripe.   It can grow in increments of 40GB raw storage until 
-   the EBS devices are at the EC2 max.  (1TB at the time of writing).
+   the EBS devices are at the EC2 max.  (1TB at the time of writing).  If your concerned about not having
+   ZFS level redunancy while growing the pool you can setup a raidz2 pool.   I've decided this is not
+   an issue since EBS itself is already redunant underneith.   I run a scrub before hand to make sure all
+   data is good on all EBS blocks first.
 
    The primary ZFS server also has ec2-api tools installed and controls the backup operation.  The
    EC2 instance is only turned on once a day to receive the day's worth of snapshots then shutdown.   
    This keeps running time per month very low and keeps the data locked since it is encrypted on
    EBS devices.   The encryption key is never stored on the EC2 instance.  It is supplied through
-   an ssh tunnel from the primary site.  
+   an ssh tunnel from the primary site. 
 
+The solution:
+
+   Security first:
+   Our primary server, still OpenIndiana 151a5 at the time of this writing hosts a zpool with many zfs 
+   folders that we want to backup and keep our data secure.   
+   
+   Since the ZoL instance will have everything accessible in a decrypted form when the system is pushing 
+   data, we decided we would build a staging pool that we would copy all of our data to and encrypt on 
+   the file level.   This is done with with public key encryption so a restore process would require 
+   supplying the private key which is not stored on the system at all.  
+
+   The procedure:
+   The staging pool will be synced to our EC2 instance using ZFS send / receive.   Using a snapshot
+   schedule, the primary zfs folders each get a snapshot policy that maintains a set number of hourly, 
+   mid-day, daily, weekly, monthy, bi-annual, and annual snap shots.   
+
+   After each snapshot cycle data is synced to the local staging pool and encrypting at the file level
+   with GPG.   The scripts utilize 'zfs diff' to build the working set of files to copy, update, 
+   rename (mv), or delete on the staging pool.   
+
+   Daily the primary server launches the ZoL instance on EC2, mounts the zpool and syncs the changes.
+
+   The challenges:
+   Data transfer rates:
+   Even initially the transfer rate over SSH was not acceptible.  We started with approximately 50 GB 
+   which blew up to a 75GB zfs send.   This took approximately 30 hours to push to EC2.  Should we make
+   any significant changes, the tranfer rate would be a problem.  An acceloration was needed.     
+
+   Many techniques and tools were examined.  mbuffer helped a little bit along with some TCP tuning, but
+   nothing significant.   I settled on bbcp (http://www.slac.stanford.edu/~abh/bbcp/)
+   because it fit the use case perfectly.  It can take data in and/or out via named pipe which is perfect
+   for zfs send/receive.  With mbuffer and bbcp, I can consistantly push the 75GB in under one hour.   There
+   is still a lot of room in our network, but this rate is quite resonable.
+
+   bbcp introduced another security issue of concern.   The data it sends over the Internet is not encrypted.
+   The setup is all done via SSH, but the transfer channels it sets up are not secured.   To deal with this
+   the primary server generates an encyption key and passes it to the receiving end via SSH and pipes data
+   through openssl before passing to bbcp.   This had zero impact on our transfer rate. 
+
+   Memory Requirements:
+   I hoped to make the receiving system to be a m1.micro instance.  It fell over after only a small burst
+   of data being sent to it.  m1.small survived a little longer, but again fell over.  At this point
+   I learned that ZoL needs at least 4GB ram.  I tried adding swap space on the instance storage, but it
+   did not help.   Then I move to using m1.medium.  It has 3.75GB ram.  Seem to be working fine until
+   I add bbcp to pipe and it too fell over after several GB of data transfer.   I have not been able to get
+   an m1.large to fall over.   Unfortunately, just launching an m1.large cost 32 cents.   
+
+   Enter spot instances. m1.large can be had for a fraction of the cost, typically 2.9 cents an hour in my zone.
+   However, it needs to be able to launch from an AMI image and must gracefully handle an unplanned termination.  
+   These requirements currently being worked out.
+
+    
+The zinger:
+   In the middle of this development Amazon release their Glacier archive service.  The storage cost is
+   1/10 the amount of EBS.   It cannot have a ZFS file system natively, however doing something like an 
+   initial full zfs send and daily incrementals, each to an new 'archive' in the vault, a 90 day cycle
+   could be created to start a new full set and incrementals.    
+
+   No file level recover would be possible, but that is what snapshots are for.   
+
+   So long as you don't have a high data change rate this could, be utilized at a fraction of the cost.
+
+   I would like to build a solution around Clacier, but is not currently on my road map.
 
 
 Requirements:
- * Small instance or larger.  
- * If using a small instance swap space is required to run pool expansions
+
+ * m1.large or larger instance.   Using anything less that 4GB ram runs into vmap allocation errors and
+   kernel freezes when only a few GB have been inserted to ZFS pool.  
  * ec2-api-tools need to be installed and in the search path or referenced
    in the zfs-config.sh file.
  * JAVA_HOME must be set
  * EC2 keys need to be on the system and referenced in the zfs-config.sh file
+
+If bbcp network accelerator is used bbcp binary must be in the excution $PATH and pwgen must be installed.
 
 If scripts are run on a machine other than the EC2 instance: (Recommended)
  * Public key authentication needs to be configured between the controlling
@@ -59,6 +131,9 @@ If scripts are run on a machine other than the EC2 instance: (Recommended)
         CheckHostIP no
         StrictHostKeyChecking ask
    to /etc/ssh/ssh_config
+
+If your primary system is Solaris/OpenIndiana many of the necessary packages can easily be installed from
+http://www.opencsw.org.
 
 
 
