README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Open Zfs Management Tools (OZMT)
+# **O**pen **Z**fs **M**anagement **T**ools  **(OZMT)**#
 
 A collection of tools for managing ZFS pools and folders on various OpenZFS platforms.
 
